*CVS*

* Added the option for sanitizing find_by_sql and the offset parts in regular finds [Sam Stephenson]. Examples:

    Project.find_all ["category = ?", category_name], "created ASC", ["? OFFSET ?", 15, 20]
    Post.find_by_sql ["SELECT * FROM posts WHERE author = ? AND created > ?", author_id, start_date]

* Fixed value quoting in all generated SQL statements, so that integers are not surrounded in quotes and that all sanitation are happening
  through the database's own quoting routine. This should hopefully make it lots easier for new adapters that doesn't accept '1' for integer
  columns.

* Fixed has_and_belongs_to_many guessing of foreign key so that keys are generated correctly for models like SomeVerySpecialClient 
  [Florian Weber]

* Added counter_sql option for has_many associations [bitsweat]. Documentation:

    <tt>:counter_sql</tt> - specify a complete SQL statement to fetch the size of the association. If +:finder_sql+ is
    specified but +:counter_sql+, +:counter_sql+ will be generated by replacing SELECT ... FROM with SELECT COUNT(*) FROM.

* Fixed that methods wrapped in callbacks still return their original result #260 [bitsweat]

* Fixed the Inflector to handle the movie/movies pair correctly #261 [Scott Baron]

* Added named bind-style variable interpolation #281 [Michael Koziarski]. Example:

    Person.find(["id = :id and first_name = :first_name", { :id => 5, :first_name = "bob' or 1=1" }])

* Added bind-style variable interpolation for the condition arrays that uses the adapter's quote method [Michael Koziarski]

  Before:
    find_first([ "user_name = '%s' AND password = '%s'", user_name, password ])]
    find_first([ "firm_id = %s", firm_id ])] # unsafe!

  After:
    find_first([ "user_name = ? AND password = ?", user_name, password ])]
    find_first([ "firm_id = ?", firm_id ])]

* Added CSV format for fixtures #272 [what-a-day]. (See the new and expanded documentation on fixtures for more information)
